--- a/talos/nodes/k8s-1.yaml.j2
+++ b/talos/nodes/k8s-1.yaml.j2
@@ -1,8 +1,8 @@
 ---
 machine:
+  type: controlplane
   nodeLabels:
     topology.kubernetes.io/zone: m
-  type: worker
   install:
     diskSelector:
       model: 512GB SSD
