--- a/talos/nodes/k8s-0.yaml.j2
+++ b/talos/nodes/k8s-0.yaml.j2
@@ -23,3 +23,31 @@ kind: LinkAliasConfig
 name: net1
 selector:
   match: link.driver == "r8169" && mac(link.permanent_addr) == "e8:ff:1e:da:2d:7f"
+---
+apiVersion: v1alpha1
+kind: BondConfig
+name: bond0
+links:
+  - net0
+  - net1
+bondMode: active-backup
+mtu: 1500
+---
+apiVersion: v1alpha1
+kind: DHCPv4Config
+name: bond0
+clientIdentifier: mac
+---
+apiVersion: v1alpha1
+kind: VLANConfig
+name: bond0.30
+vlanID: 30  # IOT
+parent: bond0
+mtu: 1500
+---
+apiVersion: v1alpha1
+kind: VLANConfig
+name: bond0.80
+vlanID: 80  # VPN
+parent: bond0
+mtu: 1500
