--- a/talos/nodes/k8s-2.yaml.j2
+++ b/talos/nodes/k8s-2.yaml.j2
@@ -15,10 +15,23 @@ apiVersion: v1alpha1
 kind: LinkAliasConfig
 name: net0
 selector:
-  match: link.driver == "igc" && mac(link.permanent_addr) == "b0:22:7a:ef:25:10"
-# ---
-# apiVersion: v1alpha1
-# kind: LinkAliasConfig
-# name: net1
-# selector:
-#   match: link.driver == "r8169" && mac(link.permanent_addr) == "e8:ff:1e:d8:85:b6"
+  match: link.driver == "e1000e" && mac(link.permanent_addr) == "b0:22:7a:ef:25:10"
+---
+apiVersion: v1alpha1
+kind: DHCPv4Config
+name: net0
+clientIdentifier: mac
+---
+apiVersion: v1alpha1
+kind: VLANConfig
+name: net0.30
+vlanID: 30  # IOT
+parent: net0
+mtu: 1500
+---
+apiVersion: v1alpha1
+kind: VLANConfig
+name: net0.80
+vlanID: 80  # VPN
+parent: net0
+mtu: 1500
