feat: add trusted VLAN to cluster for go2rtc

--- a/talos/nodes/k8s-2.yaml.j2
+++ b/talos/nodes/k8s-2.yaml.j2
@@ -36,3 +36,10 @@ name: bond0.80
 vlanID: 80  # VPN
 parent: eno1
 mtu: 1500
+---
+apiVersion: v1alpha1
+kind: VLANConfig
+name: bond0.20
+vlanID: 20  # TRUSTED
+parent: eno1
+mtu: 1500
